hphp/test/zend/good/ext/curl/tests/curl_multi_setopt_basic001.php.skipif
<?php
if (!extension_loaded("curl")) {
	    exit("skip curl extension not loaded");
}
$curl_version = curl_version();
if ($curl_version['version_number'] < 0x071000) {
	    exit("skip: test works only with curl >= 7.16.0");
}
?>