hphp/test/zend/bad/ext/curl/tests/curl_basic_022.php.skipif
<?php if (!extension_loaded("curl")) print "skip"; 
$curl_version = curl_version();
if ($curl_version['version_number'] < 0x070e01) {
	    exit("skip: test works only with curl >= 7.14.1");
}
?>